# csci4110u-assignment2

./: .gitignore  Dockerfile  README.md  assignment2.typ  build-image.sh  build-meson.bat  build.bat  extract-exe.sh  meson.build  run.bat  run.sh
build-win/: assignment2  spng.lib  z.lib
src/: arealight.pony  camera.pony  main.pony  math.pony  math_primitives.pony  plane.pony  primitives.pony  ray.pony  renderers.pony  scene.pony  shape.pony  shapes.pony  sphere.pony  vec.pony
src/spng/: spng.pony
